UtahLiveDataTest/src/objects/BudgetCategory__c.object
<CustomObject>
    <description>[Business] This object stores the Master List of all the Budget categories</description>
    <fields>
        <fullName>CategoryCode__c</fullName>
        <label>Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryDescription__c</fullName>
        <label>Category Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Non construction</fullName>
                </value>
                <value>
                    <fullName>Type-A</fullName>
                </value>
                <value>
                    <fullName>Type-B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>Row Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowOrderCTE__c</fullName>
        <label>RowOrderCTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowsNumber__c</fullName>
        <label>Row Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Award__c</fullName>
                </value>
                <value>
                    <fullName>Grant__c</fullName>
                </value>
                <value>
                    <fullName>ProgressReports__c</fullName>
                </value>
                <value>
                    <fullName>FederalCostBreakdownView__c</fullName>
                </value>
                <value>
                    <fullName>ProgressReportCostBreakdown__c</fullName>
                </value>
                <value>
                    <fullName>ProgressReportDetail__c</fullName>
                </value>
                <value>
                    <fullName>ProgressReportCostBreakdown1__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personnel</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Occupancy</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>IDC</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Fringe Benefits</fullName>
                </value>
                <value>
                    <fullName>Contracted Fees</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MST: Budget Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RowsNumber__c</columns>
        <columns>NAME</columns>
        <columns>CategoryCode__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CategoryDescription__c</columns>
        <columns>RowNumber__c</columns>
        <columns>Class__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Category</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO</fullName>
        <active>true</active>
        <label>NGO</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>